--- a/src/pages/Paginas/components/Login.css
+++ b/src/pages/Paginas/components/Login.css
@@ -12,3 +12,15 @@
     text-align: center;
 
 }
+
+.PrincipalRegistro{
+    position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        border: 1px solid rgb(0, 0, 0);
+        padding: 45px;
+        background-color: rgb(240, 171, 81);
+        width: 16%;
+}
+
