--- a/src/pages/Paginas/components/Perfil.css
+++ b/src/pages/Paginas/components/Perfil.css
@@ -3,7 +3,7 @@
     margin: auto;
     border: 2px solid #000; 
     padding: 20px; 
-    width: 750px; 
+    width:fit-content; 
     background-color:#e7dbdb9c;
     display: flex;
 }
@@ -15,21 +15,20 @@
     justify-content: center; 
 }
 .Foto img {
-    width: 300px;
+    width: auto;
     height: 300px;
     border-radius: 50%;
 }
 
 .cuadro2 {
-    
     margin: 20px;
     border: 2px solid #000; /* Grosor del borde y color (puedes ajustar según tu preferencia) */
     padding: 50px; /* Espaciado interno */
-    width: 400px; /* Ancho del cuadro (ajusta según tus necesidades) */
+    width: 550px; /* Ancho del cuadro (ajusta según tus necesidades) */
 }
 
 .Datos{
-
+    display:contents;
     color: rgb(167, 97, 97);
     margin: auto;
     text-align: center;
