--- a/src/pages/Paginas/components/Perfil.css
+++ b/src/pages/Paginas/components/Perfil.css
@@ -22,9 +22,9 @@
 
 .cuadro2 {
     margin: 20px;
-    border: 2px solid #000; /* Grosor del borde y color (puedes ajustar según tu preferencia) */
-    padding: 50px; /* Espaciado interno */
-    width: 550px; /* Ancho del cuadro (ajusta según tus necesidades) */
+    border: 2px solid #000; 
+    padding: 50px; 
+    width: 550px; 
 }
 
 .Datos{
