--- a/src/pages/Paginas/components/Perfil.css
+++ b/src/pages/Paginas/components/Perfil.css
@@ -30,8 +30,8 @@
 .Datos{
     display:contents;
     color: rgb(167, 97, 97);
-    margin: auto;
-    text-align: center;
+    margin: 50px;
+    text-align:left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
