--- a/src/layouts/full-layout/Navbar.css
+++ b/src/layouts/full-layout/Navbar.css
@@ -6,7 +6,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0f172a;
+    background-color: black;
     position: sticky;
     top: 0;
 }
@@ -37,7 +37,7 @@ nav ul li a {
 }
 
 nav ul li a:not(.active):hover {
-    background-color: #172554;
+    background-color: grey ;
 }
 
 nav .menu {
